sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: '(' expected but identifier found.
      if liste[compteur]>liste[compteur]{
         ^AlgBubbleSort1:10: error: illegal start of simple expression
    }
    ^