sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort() {
 	var detrompeur=1
  var variable=detrompeur
  while (variable!=detrompeur){
  	for (compteur<-1 to getNombreValeurs()){
      if liste[compteur]>liste[compteur]{
        echange(compteur,compteur+1)
      }
    }
    detrompeur=detrompeur1
  }
	return liste
}
/*def arrayFront9(nums:Array[Int]): Boolean = {*/